<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp2Activity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="45dp"
            android:layout_height="43dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/btn_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="9dp"
            android:textSize="24sp"
            android:text="@string/fullname"
            android:textColor="@color/gray" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/red_btn_bg"
                android:padding="10dp"
                android:src="@drawable/ic_shape_lock_"
                android:contentDescription="@string/lock"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:paddingEnd="32dp"
                android:maxLines="1"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:paddingBottom="25dp"
                android:drawableEnd="@drawable/ic_shape_eye_"
                android:textColorHint="@color/gray" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/red_btn_bg"
                android:padding="10dp"
                android:src="@drawable/ic_shape_lock_"
                android:contentDescription="@string/lock"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:hint="@string/repeat_your_password"
                android:drawableEnd="@drawable/ic_shape_eye_"
                android:inputType="textPassword"
                android:paddingEnd="32dp"
                android:maxLines="1"
                android:paddingBottom="25dp"
                android:textColorHint="@color/gray" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/btn_dark_bg"
                android:contentDescription="@string/arrow_icon"
                android:padding="19dp"
                android:src="@drawable/ic_shape_left_arrow" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/arrow_icon"
                    android:src="@drawable/ic_shape_right_arrow" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>